Implement OAuth2 login and enhance authentication system
- Add OAuth2 login with Google for seamless authentication.
- Introduce `OAuth2AuthenticationSuccessHandler` for JWT token generation and frontend redirection.
- Adjust `AuthService` to utilize `AuthenticationManager` for login process.
- Update `GlobalExceptionHandler` to handle additional exceptions like `HttpMessageNotReadableException`.
- Create `Roles` enum for consistent role usage across the application.
- Refactor `User` and `SecureUser` models and add role-mapping utilities.
- Modify database schema to allow nullable `password_hash` for OAuth2 users.
- Revamp role-retrieval logic in `RoleRepository`, `UserRoleRepository`, and `RoleService`.
- Enhance security with updated `SecurityConfig` supporting OAuth2 workflows.
- Add Google OAuth2 properties to `.env.example` and `application.properties`.

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,9 @@ SERVER_PORT=8080
 # OpenAPI / Swagger Configuration
 SPRINGDOC_API_DOCS_PATH=/v3/api-docs
 SPRINGDOC_SWAGGER_UI_PATH=/swagger-ui.html
+
+# Google OAuth2 Configuration
+# Get these from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-google-client-id-here.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret-here
+OAUTH2_REDIRECT_URI=http://localhost:8080/login/oauth2/code/google
