--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Logging
+
+# Application
 spring.application.name=webservices
 
 # Server Configuration
@@ -6,11 +9,14 @@ server.port=${SERVER_PORT:8080}
 # Spring Profiles
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
+# Spring Security
+
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:ecommerce}
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 
 # Liquibase
 spring.liquibase.enabled=true
@@ -29,3 +35,13 @@ app.jwt.refresh-token-expiration-ms=${JWT_REFRESH_TOKEN_EXPIRATION_MS:604800000}
 # OpenAPI / Swagger
 springdoc.api-docs.path=${SPRINGDOC_API_DOCS_PATH:/v3/api-docs}
 springdoc.swagger-ui.path=${SPRINGDOC_SWAGGER_UI_PATH:/swagger-ui.html}
+
+# OAuth2 Google Configuration
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:your-client-id}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET:your-client-secret}
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri=${OAUTH2_REDIRECT_URI:{baseUrl}/login/oauth2/code/{registrationId}}
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
