Add email verification and password reset functionality
- Implement `EmailService` to handle email sending logic for verification and reset flows.
- Extend `AuthService` to support email verification, forgot password, and reset password functionality with validation.
- Introduce token services (`TokenService`) for managing email verification and password reset tokens.
- Add models (`ResetPasswordRequest`, `VerifyEmailRequest`, etc.) for request payload validation.
- Update `AuthController` with endpoints for email-related operations.
- Introduce configuration classes (`EmailConfig`, `EmailProperties`) for managing email settings.
- Add and update integration tests across controllers and services.
- Update `.env.example` and `application.properties` with new email settings.

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,19 @@ SPRINGDOC_SWAGGER_UI_PATH=/swagger-ui.html
 GOOGLE_CLIENT_ID=your-google-client-id-here.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-google-client-secret-here
 OAUTH2_REDIRECT_URI=http://localhost:8080/login/oauth2/code/google
+
+# Email Configuration
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
+MAIL_FROM=noreply@ecommerce.com
+MAIL_FROM_NAME=E-Commerce Platform
+
+# Application URLs
+APP_BASE_URL=http://localhost:8080
+APP_FRONTEND_URL=http://localhost:3000
+
+# Token Expiration (in hours)
+EMAIL_VERIFICATION_TOKEN_EXPIRATION_HOURS=24
+PASSWORD_RESET_TOKEN_EXPIRATION_HOURS=1
