--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Logging
-logging.level.org.springframework.jdbc=trace 
+#logging.level.org.springframework.jdbc=trace
 
 # Application
 spring.application.name=webservices
@@ -46,3 +46,27 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+# Email Configuration
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:your-email@gmail.com}
+spring.mail.password=${MAIL_PASSWORD:your-app-password}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# Application Email Settings
+app.mail.from=${MAIL_FROM:noreply@ecommerce.com}
+app.mail.from-name=${MAIL_FROM_NAME:E-Commerce Platform}
+
+# Application URLs
+app.base-url=${APP_BASE_URL:http://localhost:8080}
+app.frontend-url=${APP_FRONTEND_URL:http://localhost:3000}
+
+# Token Expiration
+app.email-verification-token-expiration-hours=${EMAIL_VERIFICATION_TOKEN_EXPIRATION_HOURS:24}
+app.password-reset-token-expiration-hours=${PASSWORD_RESET_TOKEN_EXPIRATION_HOURS:1}
