--- a/src/main/resources/db/changelog/changes/changelog-v1.0.0.yaml
+++ b/src/main/resources/db/changelog/changes/changelog-v1.0.0.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/v1.0.0/user/changelog-user.yaml
       relativeToChangelogFile: false
+  - include:
+      file: db/changelog/v1.0.0/email/changelog-email-tokens.yaml
+      relativeToChangelogFile: false
