Implement event management with Redis caching and async processing
- Add `EventService` for event creation, processing, and caching in Redis.
- Introduce `UserRegisteredEvent` and `PasswordResetEvent` with respective listeners.
- Implement `EventRepository` for database interactions with the new `events` table.
- Enhance test coverage with integration and unit tests for event listeners and services.
- Add Liquibase changelog and SQL script for `events` table creation.

--- a/src/main/resources/db/changelog/changes/changelog-v1.0.0.yaml
+++ b/src/main/resources/db/changelog/changes/changelog-v1.0.0.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/v1.0.0/email/changelog-email-tokens.yaml
       relativeToChangelogFile: false
+  - include:
+      file: db/changelog/v1.0.0/event/changelog-event.yaml
+      relativeToChangelogFile: false
